# lplTrade

./: .gitignore  .gitignore.swp  .project  .tmp  README.md  _NFLX  ap  b  dbArchive  error_report.html  history  lplt.py  out.txt  out1.txt  stage
Docs/: 2BarOpen1BarClose.txt  AlgoStatus.numbers  Candlestick Patterns  algorithms.txt  applYearly.txt  data  design  install.rtf  preLose  results  tracking.txt
PTP/: __init__.py
PTP/trade_interface/: e_trade_api.py  trade_interface.py
analyzeResults/: 20210528.ay  20210615.ay  20210616.ay  20210617.ay  20210618.ay  20210621.ay  20210622.ay  20210623.ay  20210624.ay  20210625.ay  20210628.ay  20210629.ay  20210630.ay  20210701.ay  20210702.ay
bc/: 1M_IWM.bc
bestAlgos/: .BIDU.bs.swp  A.bs  AA.bs  AACG.bs  AAL.bs  AAME.bs  AAP.bs  AAPL.all  AAPL.bs  AAPL.gn  ABBV.bs  ABCL.bs  ABNB.bs  ABSI.bs  ABT.bs  ABUS.bs  ACB.bs  ACH.bs  ACHL.bs  ACHV.all  ACHV.bs  ACHV.gn  ACI.bs  ACIU.bs  ACMR.bs  ACOR.bs  ACRS.bs  ACY.bs  ADBE.all  ADBE.bs  ADBE.gn  ADGI.bs  ADI.bs  ADIL.all  ADIL.bs  ADIL.gn  ADMA.bs  ADMP.bs  ADMS.bs  ADSK.bs  (+1378 more)
bu/scripts/: cleanupDCs.sh  configSlave.sh  copyProfiles.sh  daysBest.sh  db.sh  dbBest.sh  dbStart.sh  dbStop.sh  getHostFromIP.py  keepAlive.sh  keepAliveDB.sh  keepAliveM.sh  modBCs  modPrices.sh  modProfileStocksLine.sh  modProfiles.sh  redoTestsParallel.sh  results.sh  results.sh.or  runBestAlgos.sh  startSH.sh  testDB.sh  testModsDB.sh
bu/src/: dynamic.py  limits.py  premarket.py  price.py  process.py  thred.py  util.py
daysBest/: .daysBest.db.20210904.swp  .daysBest.db.20210930.swp  .postResults20221123.po.swp  .postResults20230105.po.swp  LR20220804  LR20220804.default  LR20220812  daysBest.db.  daysBest.db.20210812  daysBest.db.20210813  daysBest.db.20210814  daysBest.db.20210815  daysBest.db.20210816  daysBest.db.20210819  daysBest.db.20210820  daysBest.db.20210821  daysBest.db.20210825  daysBest.db.20210826  daysBest.db.20210902  daysBest.db.20210903  daysBest.db.20210904  daysBest.db.20210906  daysBest.db.20210907  daysBest.db.20210908  daysBest.db.20210909  daysBest.db.20210910  daysBest.db.20210911  daysBest.db.20210913  daysBest.db.20210914  daysBest.db.20210915  daysBest.db.20210916  daysBest.db.20210917  daysBest.db.20210918  daysBest.db.20210920  daysBest.db.20210921  daysBest.db.20210922  daysBest.db.20210923  daysBest.db.20210924  daysBest.db.20210925  daysBest.db.20210927  (+2253 more)
db.or/: postmaster.opts  postmaster.pid
db.or/global/: 1214  1261_vm  1262  2396  2396_vm  2671  2672  pg_control  pg_internal.init
db.or/pg_stat/: db_0.stat  db_16384.stat  global.stat
db.or/pg_xact/: 0000
db/20220131/: log  postgresql.conf  postmaster.opts  postmaster.pid
dc/: A.dc  A.gp  AA.dc  AACG.dc  AACG.gp  AAL.dc  AAL.gp  AAME.dc  AAME.gp  AAP.dc  AAPL.dc  AAPL.gp  ABBV.dc  ABBV.gp  ABCL.dc  ABNB.dc  ABNB.gp  ABSI.dc  ABT.dc  ABT.gp  ABUS.dc  ABVC.dc  ACAD.dc  ACB.dc  ACB.gp  ACER.dc  ACH.dc  ACHL.dc  ACHL.gp  ACHV.dc  ACHV.gp  ACI.dc  ACIU.dc  ACMR.dc  ACOR.dc  ACOR.gp  ACRS.dc  ACRS.gp  ACTC.dc  ACTC.gp  (+2274 more)
dc.or/: A.dc  A.gp  AACG.dc  AACG.gp  AAL.dc  AAL.gp  AAME.dc  AAME.gp  AAPL.dc  AAPL.gp  ABBV.dc  ABBV.gp  ABNB.dc  ABNB.gp  ABT.dc  ABT.gp  ACB.dc  ACB.gp  ACHL.dc  ACHL.gp  ACHV.dc  ACHV.gp  ACOR.dc  ACOR.gp  ACRS.dc  ACRS.gp  ACY.dc  ACY.gp  ADBE.dc  ADBE.gp  ADIL.dc  ADIL.gp  ADMA.dc  ADMA.gp  ADMP.dc  ADMP.gp  AEI.dc  AEI.gp  AEMD.dc  AEMD.gp  (+1178 more)
dev/: db.py  results.sh.mod  test.py
dev/scripts/: allTests.sh  createDB.sh  getDailyChartData.sh  keepAliveM.sh  popDB.sh  re  rt  test.sh  trimBCs.sh
dev/src/: __init__.py  account.py  algorithms.py  algorithms.py.before  algorithms.py.or  barchart.py  classes.py  connect.py  dailychart.py  dynamic.py  log.py  pattern.py  profile.py  scratch.py  scratchPad.py  tailTest.py  thred.py  trends.py  util.or.py
docs/: .selectedStocks.swp  20082020AAPLAnalysis.txt  AlgoStatus.numbers  LatestUsersWithACMProdDeploymentAuth (002).numbers  LatestUsersWithACMProdDeploymentAuth (002).xlsx  bb  bestBSs_20230221  buyOutAuto.txt  buyOutText  data  dbMM  dbMoved  dbSchema.txt  dbmmT  design  earnings-calendar  endBeginDayTrade.txt  holidaysForStockMarket.txt  install.txt  needTestsRun  observations.txt  postResults.po  postResults20210924.po  preGain  processedStocks  pythonNotes  results  selectedStocks  stats  stats.txt  tracking.txt  verification.txt  yahooGainers
ignoreStocks/: ignoreStocks.ig
prices/: 1M_IWM.pr  2BarOpen1BarClose.json_IWM.pr
profiles/: .1M.json.swp  1M.json  2BarOpen1BarClose.debug  2BarOpen1BarClose.json  2BarOpen1BarClose.triggerPct.json  2BarOpen1BarClose6hour.json  2BarOpen1BarCloseAgr.json  3mIWM.json  4mIWM.json  5bar.json  active.json  active.json.or  active_2m.json  autoStocks.txt  daysBest3TestDays.json  daysBestLiveTrading42.json  daysBestNoLiveTrading42.json  daysBestNoLiveTrading64.json  daysBestNoTestDataLiveTrading42.json  good  hiBeta  hiBeta1  preMarketAnalysis.json  preMarketAnalysisNoTestData.json  profile.json  stocks.txt  stocksFile.json  stocksLine.txt  template.json  zerod
pyetrade/: accounts.py  authorization.py  market.py
scripts/: allTests.sh  bestAlgoDB.sh  bestAllAlgos.sh  bestDB.sh  cleanupDCs.sh  copyProfiles.sh  countBestAlgos.sh  cps.sh  createDB.sh  cronTest.sh  daysBest.sh  db.sh  dbBest.sh  dbResults.sh  dbStart.sh  dbStop.sh  dbStopAll.sh  delDBVal.sh  ds  dv  fb  findBestAlgos.sh  fixOpening.sh  getDBVal.sh  getDailyChartData.sh  gv  ia  initAllAlgos.sh  initBestAlgos.sh  initIncBestAlgos.sh  keepAlive.sh  keepAliveDB.sh  keepAliveM.sh  keepAliveS.sh  keepAliveS.sh.or  liveResults.sh  lpltLinks.sh  manualTrade.sh  mo  modBCs  (+23 more)
src/: 2BarOpen2BarClose.json  __init__.py  account.py  algorithms.py  barchart.py  buffer.py  catcher.py  classes.py  connect.py  dailychart.py  db.py  debug.txt  debug1.txt  debug15.txt  debug15E.txt  debugbtc.txt  dynamic.py  limits.py  log.py  manualOveride.py  movedCode.py  orderET.py  out2.txt  pattern.py  premarket.py  price.py  profile.py  target.py  thread.py  thred.py  trends.py  util.py
src/log/: out  (+1 more)
targets/: targets.json
test/: 1M_IWM.bc  1M_IWM.pr  ReAdMe
(+211 files in other folders)
