Gain: $ 23.18 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4
Gain: $ 15.17 Win %: 50.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV
Gain: $ 1.26 Win %: 98.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IR5
Gain: $ 19.62 Win %: 52.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR
Gain: $ -7.6 Win %: 47.00 in 93 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AV
Gain: $ -1.01 Win %: 62.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_VI
Gain: $ -2.03 Win %: 45.00 in 93 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AL
Gain: $ -4.32 Win %: 47.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_LI
Gain: $ 19.91 Win %: 54.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QP
Gain: $ 13.22 Win %: 47.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM
Gain: $ 19.69 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_SS
Gain: $ 20.63 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QL
Gain: $ 22.63 Win %: 50.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_DB6
Gain: $ 0 Win %: 100.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_IR5
Gain: $ 0.39 Win %: 100.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QP_IR5
Gain: $ 16.42 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_TR
Gain: $ 1.56 Win %: 44.00 in 93 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AV
Gain: $ 13.54 Win %: 54.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_QP
Gain: $ 15.08 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_QP
Gain: $ 14.87 Win %: 53.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_TR
Gain: $ -15.91 Win %: 48.00 in 93 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_AV
Gain: $ 17.86 Win %: 52.00 in 94 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_QP
Gain: $ 16.26 Win %: 53.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV
Gain: $ 1.01 Win %: 100.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IR5
Gain: $ 17.71 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR
Gain: $ -22.04 Win %: 45.00 in 93 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AV
Gain: $ 2.37 Win %: 64.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_VI
Gain: $ -6.41 Win %: 45.00 in 93 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AL
Gain: $ -6.31 Win %: 45.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_LI
Gain: $ 23.64 Win %: 57.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QP
Gain: $ 14.65 Win %: 47.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM
Gain: $ 15.6 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_SS
Gain: $ 18.1 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QL
Gain: $ 20.66 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_DB6
Gain: $ 0 Win %: 100.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR_IR5
Gain: $ -1.33 Win %: 98.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QP_IR5
Gain: $ 16.98 Win %: 55.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_TR
Gain: $ -1.49 Win %: 46.00 in 93 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AV
Gain: $ 17.95 Win %: 56.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_QP
Gain: $ 18.06 Win %: 56.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR_QP
Gain: $ 14.18 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_TR
Gain: $ -21.85 Win %: 46.00 in 93 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AV
Gain: $ 20.21 Win %: 54.00 in 94 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_QP
Gain: $ 16.26 Win %: 53.00 in 94 days with algo TB5_HL_HI_QM_OB1_OS1_CB4_CS4_RV
Gain: $ 0 Win %: 100.00 in 94 days with algo TB5_HL_HI_QM_OB1_OS1_CB4_CS4_IR5
Gain: $ 17.44 Win %: 51.00 in 94 days with algo TB5_HL_HI_QM_OB1_OS1_CB4_CS4_TR
Gain: $ -22.04 Win %: 45.00 in 93 days with algo TB5_HL_HI_QM_OB1_OS1_CB4_CS4_AV
Gain: $ 2.37 Win %: 64.00 in 94 days with algo TB5_HL_HI_QM_OB1_OS1_CB4_CS4_VI
