AAPL Gain: $ 28.87 Win %: 56.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5
AAPL Gain: $ 11.01 Win %: 54.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
AAPL Gain: $ 11.01 Win %: 54.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
AAPL Gain: $ 2.9 Win %: 51.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
AAPL Gain: $ 16.74 Win %: 52.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
AAPL Gain: $ 11.98 Win %: 55.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
AAPL Gain: $ 1.34 Win %: 52.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
AAPL Gain: $ 9.3 Win %: 54.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
AAPL Gain: $ 22.88 Win %: 60.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
AAPL Gain: $ 2.09 Win %: 66.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
AAPL Gain: $ 3.44 Win %: 80.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
AAPL Gain: $ 8.97 Win %: 52.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR5
AAPL Gain: $ 27.41 Win %: 59.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
AAPL Gain: $ -1.25 Win %: 53.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR5
AAPL Gain: $ 24.66 Win %: 52.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
AAPL Gain: $ 22.72 Win %: 61.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
AAPL Gain: $ 42.25 Win %: 60.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
AAPL Gain: $ 23.79 Win %: 63.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
AAPL Gain: $ 20.63 Win %: 54.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
AAPL Gain: $ 22.02 Win %: 61.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
AAPL Gain: $ 23.78 Win %: 55.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
AAPL Gain: $ 27.14 Win %: 71.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
AAPL Gain: $ 24.04 Win %: 87.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
AAPL Gain: $ -21.78 Win %: 44.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
AAPL Gain: $ 36.8 Win %: 59.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV
AAPL Gain: $ 17.4 Win %: 55.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IR5
AAPL Gain: $ 25.81 Win %: 55.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR
AAPL Gain: $ 8.1 Win %: 60.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AV
AAPL Gain: $ 20.13 Win %: 60.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AL
AAPL Gain: $ 1.06 Win %: 51.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_VI
AAPL Gain: $ 30.66 Win %: 55.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_LI
AAPL Gain: $ 32.81 Win %: 60.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QP
AAPL Gain: $ 30.58 Win %: 56.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM
AAPL Gain: $ 13.01 Win %: 56.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_SS
AAPL Gain: $ 25.8 Win %: 56.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QL
AAPL Gain: $ 9.21 Win %: 55.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_DB30
AAPL Gain: $ 28.09 Win %: 57.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AO
AAPL Gain: $ 4.27 Win %: 47.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AC
AAPL Gain: $ 28.27 Win %: 69.00 in 105 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT
AAPL Gain: $ 19.66 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP_DB6
AAPL Gain: $ 24.24 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR_DB6
AAPL Gain: $ 7.31 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV_DB6
AAPL Gain: $ 13.42 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL_DB6
AAPL Gain: $ 18.19 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP_DB6
AAPL Gain: $ 28.8 Win %: 57.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR_DB6
AAPL Gain: $ -5.33 Win %: 49.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV_DB6
AAPL Gain: $ 22.79 Win %: 54.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP_DB6
AAPL Gain: $ 17.71 Win %: 62.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL_DB6
AAPL Gain: $ 12.4 Win %: 75.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP_DB6
AAPL Gain: $ 25.14 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TR_IR1
AAPL Gain: $ 16.35 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP
AAPL Gain: $ 13.63 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_QP_IR1
AAPL Gain: $ 20.94 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR
AAPL Gain: $ 2.49 Win %: 49.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV
AAPL Gain: $ 15.87 Win %: 51.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL
AAPL Gain: $ 15.6 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP
AAPL Gain: $ 17.2 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR
AAPL Gain: $ -16.32 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV
AAPL Gain: $ 16.74 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP
AAPL Gain: $ -0.23 Win %: 61.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL
AAPL Gain: $ 10.04 Win %: 74.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP
AAPL Gain: $ 3.89 Win %: 47.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AO_AC
AAPL Gain: $ 19.51 Win %: 51.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV
AAPL Gain: $ 24.97 Win %: 58.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IR1
AAPL Gain: $ 20.13 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TR
AAPL Gain: $ -11.23 Win %: 46.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AV
AAPL Gain: $ -0.11 Win %: 47.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AL
AAPL Gain: $ -2.05 Win %: 64.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_VI
AAPL Gain: $ 0.56 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_LI
AAPL Gain: $ 21.68 Win %: 54.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_QP
AAPL Gain: $ 11.19 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM
AAPL Gain: $ 18.74 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_SS
AAPL Gain: $ 22.28 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_QL
AAPL Gain: $ 29.42 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_DB6
AAPL Gain: $ 25.34 Win %: 49.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AO
AAPL Gain: $ 17.91 Win %: 51.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AC
AAPL Gain: $ 11.23 Win %: 62.00 in 105 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT
AAPL Gain: $ 23.48 Win %: 57.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_QP_DB6
AAPL Gain: $ 19.2 Win %: 54.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_TR_DB6
AAPL Gain: $ 22.11 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AV_DB6
AAPL Gain: $ 10.84 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AL_DB6
AAPL Gain: $ 16.81 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_QP_DB6
AAPL Gain: $ 33.49 Win %: 59.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_TR_DB6
AAPL Gain: $ 20.42 Win %: 57.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_AV_DB6
AAPL Gain: $ 19.35 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_QP_DB6
AAPL Gain: $ 21.75 Win %: 66.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QL_DB6
AAPL Gain: $ 16.13 Win %: 80.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QP_DB6
AAPL Gain: $ 10.63 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_IR1
AAPL Gain: $ 13.49 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_QP
AAPL Gain: $ 6.85 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QP_IR1
AAPL Gain: $ 11.18 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_TR
AAPL Gain: $ 8.49 Win %: 47.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AV
AAPL Gain: $ 11.43 Win %: 51.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AL
AAPL Gain: $ 15.58 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_QP
AAPL Gain: $ 18.89 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_TR
AAPL Gain: $ -4.31 Win %: 51.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_AV
AAPL Gain: $ 10.5 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_QP
AAPL Gain: $ 4.61 Win %: 61.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QL
AAPL Gain: $ 12.09 Win %: 79.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QP
AAPL Gain: $ -5.96 Win %: 44.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AO_AC
AAPL Gain: $ 11.6 Win %: 49.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV
AAPL Gain: $ 8.09 Win %: 54.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IR1
AAPL Gain: $ 17.96 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR
AAPL Gain: $ 4.91 Win %: 49.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AV
AAPL Gain: $ 2.46 Win %: 48.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AL
AAPL Gain: $ 3.08 Win %: 54.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_VI
AAPL Gain: $ -2.57 Win %: 47.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_LI
AAPL Gain: $ 19.67 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QP
AAPL Gain: $ 18.49 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM
AAPL Gain: $ 18.22 Win %: 58.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_SS
AAPL Gain: $ 19.93 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QL
AAPL Gain: $ 34.96 Win %: 57.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_DB6
AAPL Gain: $ 19.26 Win %: 51.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AO
AAPL Gain: $ 14.36 Win %: 49.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AC
AAPL Gain: $ 11.96 Win %: 60.00 in 105 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT
AAPL Gain: $ 20.92 Win %: 58.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR_QP_DB6
AAPL Gain: $ 14.34 Win %: 59.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_TR_DB6
AAPL Gain: $ 5.84 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AV_DB6
AAPL Gain: $ 0.03 Win %: 44.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AL_DB6
AAPL Gain: $ 10.48 Win %: 57.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_QP_DB6
AAPL Gain: $ 29.38 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_TR_DB6
AAPL Gain: $ -0.83 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AV_DB6
AAPL Gain: $ 23.74 Win %: 57.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_QP_DB6
AAPL Gain: $ 16.85 Win %: 63.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QL_DB6
AAPL Gain: $ 7.78 Win %: 80.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QP_DB6
AAPL Gain: $ 19.46 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR_IR1
AAPL Gain: $ 17.92 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR_QP
AAPL Gain: $ 20.35 Win %: 57.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QP_IR1
AAPL Gain: $ 9 Win %: 57.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_TR
AAPL Gain: $ 3.62 Win %: 49.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AV
AAPL Gain: $ 5.17 Win %: 48.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AL
AAPL Gain: $ 14.64 Win %: 54.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_QP
AAPL Gain: $ 18.8 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_TR
AAPL Gain: $ -3.66 Win %: 52.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AV
AAPL Gain: $ 19.48 Win %: 51.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_QP
AAPL Gain: $ 1.85 Win %: 59.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QL
AAPL Gain: $ 3.09 Win %: 77.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QP
AAPL Gain: $ -45 Win %: 40.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AO_AC
AAPL Gain: $ 16.08 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV
AAPL Gain: $ 18.06 Win %: 58.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IR1
AAPL Gain: $ 20.31 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR
AAPL Gain: $ 3.74 Win %: 49.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AV
AAPL Gain: $ 13.97 Win %: 51.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AL
AAPL Gain: $ -6.03 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_VI
AAPL Gain: $ -1.58 Win %: 53.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_LI
AAPL Gain: $ 17.72 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QP
AAPL Gain: $ 21.58 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM
AAPL Gain: $ 11.62 Win %: 55.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_SS
AAPL Gain: $ 18.72 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QL
AAPL Gain: $ 27.98 Win %: 56.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_DB6
AAPL Gain: $ 18.9 Win %: 50.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AO
AAPL Gain: $ 8.5 Win %: 48.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AC
AAPL Gain: $ 5.3 Win %: 60.00 in 105 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT
AAPL Gain: $ 25.27 Win %: 56.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5
AAPL Gain: $ 9.36 Win %: 54.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
AAPL Gain: $ 11.68 Win %: 55.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
AAPL Gain: $ 3.46 Win %: 52.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
AAPL Gain: $ 16.98 Win %: 53.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
AAPL Gain: $ 12.85 Win %: 56.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
AAPL Gain: $ 3.85 Win %: 55.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
AAPL Gain: $ 10.13 Win %: 55.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
AAPL Gain: $ 22.1 Win %: 60.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
AAPL Gain: $ -6.64 Win %: 36.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
AAPL Gain: $ -0.92 Win %: 54.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
AAPL Gain: $ 9.88 Win %: 54.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR5
AAPL Gain: $ 24.56 Win %: 58.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
AAPL Gain: $ 25.27 Win %: 56.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5
AAPL Gain: $ 10.01 Win %: 55.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
AAPL Gain: $ 10.09 Win %: 54.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
AAPL Gain: $ 3.46 Win %: 52.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
AAPL Gain: $ 15.65 Win %: 52.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
AAPL Gain: $ 11.3 Win %: 55.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
AAPL Gain: $ 1.15 Win %: 53.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
AAPL Gain: $ 2.73 Win %: 53.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
AAPL Gain: $ 20.65 Win %: 59.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
AAPL Gain: $ -1.87 Win %: 35.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
AAPL Gain: $ 1.32 Win %: 57.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
AAPL Gain: $ 5.75 Win %: 52.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR5
AAPL Gain: $ 26.29 Win %: 58.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
AAPL Gain: $ 4.8 Win %: 55.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR5
AAPL Gain: $ 28.12 Win %: 54.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
AAPL Gain: $ 22.76 Win %: 61.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
AAPL Gain: $ 43.33 Win %: 62.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
AAPL Gain: $ 21.04 Win %: 62.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
AAPL Gain: $ 22.01 Win %: 55.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
AAPL Gain: $ 22.93 Win %: 62.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
AAPL Gain: $ 24.67 Win %: 59.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AL
AAPL Gain: $ 23.54 Win %: 56.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
AAPL Gain: $ 19.1 Win %: 51.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
AAPL Gain: $ 11.19 Win %: 72.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
AAPL Gain: $ -21.47 Win %: 45.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
AAPL Gain: $ 2.71 Win %: 57.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QP_PM
AAPL Gain: $ 37.3 Win %: 59.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV
AAPL Gain: $ 15.44 Win %: 57.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IR5
AAPL Gain: $ 17.55 Win %: 53.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR
AAPL Gain: $ 8.34 Win %: 60.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AV
AAPL Gain: $ 20.3 Win %: 61.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AL
AAPL Gain: $ 5.52 Win %: 53.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_VI
AAPL Gain: $ 31.64 Win %: 57.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_LI
AAPL Gain: $ 30.42 Win %: 60.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QP
AAPL Gain: $ 31.14 Win %: 57.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM
AAPL Gain: $ 9.16 Win %: 57.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_SS
AAPL Gain: $ 24.08 Win %: 57.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QL
AAPL Gain: $ 6.83 Win %: 55.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_DB30
AAPL Gain: $ 26.24 Win %: 57.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AO
AAPL Gain: $ 4.67 Win %: 47.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AC
AAPL Gain: $ 19.76 Win %: 51.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT
AAPL Gain: $ 16.75 Win %: 56.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_PM
AAPL Gain: $ 32.6 Win %: 58.00 in 107 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TS
AAPL Gain: $ 24.4 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_QP_DB6
AAPL Gain: $ 20.62 Win %: 55.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_TR_DB6
AAPL Gain: $ 25.42 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AV_DB6
AAPL Gain: $ 10.64 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AL_DB6
AAPL Gain: $ 15.85 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_QP_DB6
AAPL Gain: $ 33.64 Win %: 59.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_TR_DB6
AAPL Gain: $ 19.04 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_AV_DB6
AAPL Gain: $ 23.42 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_QP_DB6
AAPL Gain: $ 6.82 Win %: 42.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QL_DB6
AAPL Gain: $ 3.13 Win %: 62.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QP_DB6
AAPL Gain: $ 12.25 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_IR1
AAPL Gain: $ 14.44 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_QP
AAPL Gain: $ 9.6 Win %: 52.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QP_IR1
AAPL Gain: $ 12.74 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_TR
AAPL Gain: $ 7.57 Win %: 47.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AV
AAPL Gain: $ 9.71 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AL
AAPL Gain: $ 15.8 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_QP
AAPL Gain: $ 20.99 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_TR
AAPL Gain: $ -7.27 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_AV
AAPL Gain: $ -1.55 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_AL
AAPL Gain: $ 13.06 Win %: 52.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_QP
AAPL Gain: $ -7.64 Win %: 39.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QL
AAPL Gain: $ 1.44 Win %: 62.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QP
AAPL Gain: $ -4.44 Win %: 44.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AO_AC
AAPL Gain: $ 21.61 Win %: 67.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QP_PM
AAPL Gain: $ 17.84 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV
AAPL Gain: $ 7.61 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IR1
AAPL Gain: $ 20.54 Win %: 55.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR
AAPL Gain: $ 6.16 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AV
AAPL Gain: $ 3.7 Win %: 47.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AL
AAPL Gain: $ 3.83 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_VI
AAPL Gain: $ -4.33 Win %: 48.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_LI
AAPL Gain: $ 19.42 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QP
AAPL Gain: $ 18.42 Win %: 52.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM
AAPL Gain: $ 18.32 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_SS
AAPL Gain: $ 21.31 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_QL
AAPL Gain: $ 36.82 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_DB6
AAPL Gain: $ 20.22 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AO
AAPL Gain: $ 15.21 Win %: 49.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_AC
AAPL Gain: $ -6.18 Win %: 39.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT
AAPL Gain: $ 28.78 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_PM
AAPL Gain: $ 23.65 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TS
AAPL Gain: $ 22.08 Win %: 58.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR_QP_DB6
AAPL Gain: $ 14.57 Win %: 58.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_TR_DB6
AAPL Gain: $ 5.42 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AV_DB6
AAPL Gain: $ -0.23 Win %: 45.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AL_DB6
AAPL Gain: $ 14.26 Win %: 58.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_QP_DB6
AAPL Gain: $ 31.02 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_TR_DB6
AAPL Gain: $ -1.31 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AV_DB6
AAPL Gain: $ 26.17 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_QP_DB6
AAPL Gain: $ -6.45 Win %: 34.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QL_DB6
AAPL Gain: $ -1.17 Win %: 61.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QP_DB6
AAPL Gain: $ 19.69 Win %: 55.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR_IR1
AAPL Gain: $ 20.17 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR_QP
AAPL Gain: $ 21.72 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QP_IR1
AAPL Gain: $ 9.96 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_TR
AAPL Gain: $ 5.36 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AV
AAPL Gain: $ 3.84 Win %: 48.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AL
AAPL Gain: $ 16.24 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV_QP
AAPL Gain: $ 19.46 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_TR
AAPL Gain: $ -3.8 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AV
AAPL Gain: $ 10.93 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AL
AAPL Gain: $ 20.67 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM_QP
AAPL Gain: $ -8.32 Win %: 36.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QL
AAPL Gain: $ -4.63 Win %: 58.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QP
AAPL Gain: $ -69.22 Win %: 39.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AO_AC
AAPL Gain: $ 16.18 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QP_PM
AAPL Gain: $ 18.44 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_RV
AAPL Gain: $ 19.22 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IR1
AAPL Gain: $ 7.62 Win %: 55.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TR
AAPL Gain: $ 4.42 Win %: 49.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AV
AAPL Gain: $ 14.45 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AL
AAPL Gain: $ -5.94 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_VI
AAPL Gain: $ -0.63 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_LI
AAPL Gain: $ 20.78 Win %: 55.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QP
AAPL Gain: $ 22.82 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_HM
AAPL Gain: $ 14.75 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_SS
AAPL Gain: $ 20.11 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_QL
AAPL Gain: $ 31.78 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_DB6
AAPL Gain: $ 20.11 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AO
AAPL Gain: $ 14.75 Win %: 48.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_AC
AAPL Gain: $ -8.31 Win %: 36.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_IT
AAPL Gain: $ 16.23 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_PM
AAPL Gain: $ 0 Win %: 100.00 in 107 days with algo TB5_HL_HI_QM_OB2_OS2_CB4_CS4_TS
AAPL Gain: $ 22.27 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP_DB6
AAPL Gain: $ 25.36 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR_DB6
AAPL Gain: $ 7.99 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV_DB6
AAPL Gain: $ 10.59 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL_DB6
AAPL Gain: $ 19.62 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP_DB6
AAPL Gain: $ 23.2 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR_DB6
AAPL Gain: $ -0.87 Win %: 52.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV_DB6
AAPL Gain: $ 27.16 Win %: 55.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP_DB6
AAPL Gain: $ -1.77 Win %: 42.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL_DB6
AAPL Gain: $ -3.38 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP_DB6
AAPL Gain: $ 27.98 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TR_IR1
AAPL Gain: $ 18.99 Win %: 54.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TR_QP
AAPL Gain: $ 15.57 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_QP_IR1
AAPL Gain: $ 27.86 Win %: 58.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_TR
AAPL Gain: $ 3.29 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AV
AAPL Gain: $ 14.54 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_AL
AAPL Gain: $ 14.56 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV_QP
AAPL Gain: $ 18.72 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_TR
AAPL Gain: $ -14.67 Win %: 52.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AV
AAPL Gain: $ -5.54 Win %: 49.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_AL
AAPL Gain: $ 20.81 Win %: 51.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM_QP
AAPL Gain: $ -7.74 Win %: 41.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QL
AAPL Gain: $ -3.86 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT_QP
AAPL Gain: $ 11.66 Win %: 48.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AO_AC
AAPL Gain: $ 12.96 Win %: 71.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_QP_PM
AAPL Gain: $ 18.64 Win %: 52.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_RV
AAPL Gain: $ 27.01 Win %: 59.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IR1
AAPL Gain: $ 22.06 Win %: 55.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TR
AAPL Gain: $ -10.21 Win %: 47.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AV
AAPL Gain: $ -3.35 Win %: 45.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AL
AAPL Gain: $ 1.72 Win %: 66.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_VI
AAPL Gain: $ -1.3 Win %: 52.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_LI
AAPL Gain: $ 20.02 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_QP
AAPL Gain: $ 14.96 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_HM
AAPL Gain: $ 19.96 Win %: 53.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_SS
AAPL Gain: $ 23.4 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_QL
AAPL Gain: $ 30.87 Win %: 57.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_DB6
AAPL Gain: $ 27.94 Win %: 50.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AO
AAPL Gain: $ 19.36 Win %: 52.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_AC
AAPL Gain: $ -7.74 Win %: 41.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_IT
AAPL Gain: $ 12.19 Win %: 56.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_PM
AAPL Gain: $ -0.72 Win %: 98.00 in 107 days with algo TB5_HL_HI_QM_OB4_OS4_CB4_CS4_TS
