AAPL Gain: $ 20.09 Win %: 52.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5
AAPL Gain: $ 4.22 Win %: 50.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
AAPL Gain: $ 0.52 Win %: 53.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
AAPL Gain: $ -5.13 Win %: 53.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
AAPL Gain: $ -15.66 Win %: 49.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
AAPL Gain: $ -6.2 Win %: 50.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
AAPL Gain: $ -2.41 Win %: 50.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
AAPL Gain: $ -2.23 Win %: 52.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
AAPL Gain: $ 9.75 Win %: 57.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
AAPL Gain: $ -0.66 Win %: 48.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
AAPL Gain: $ 6.13 Win %: 53.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
AAPL Gain: $ -5.07 Win %: 50.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR5
AAPL Gain: $ 28.33 Win %: 57.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_TS
AAPL Gain: $ 16.41 Win %: 54.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
AAPL Gain: $ -13.23 Win %: 46.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR5
AAPL Gain: $ 16.68 Win %: 50.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
AAPL Gain: $ 5.18 Win %: 57.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
AAPL Gain: $ -9.69 Win %: 54.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
AAPL Gain: $ 7.46 Win %: 57.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
AAPL Gain: $ 9.51 Win %: 52.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
AAPL Gain: $ 14.62 Win %: 57.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
AAPL Gain: $ 7.04 Win %: 53.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AL
AAPL Gain: $ -1.57 Win %: 50.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
AAPL Gain: $ 20.57 Win %: 53.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
AAPL Gain: $ 20.79 Win %: 55.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
AAPL Gain: $ 25.6 Win %: 56.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT_TS
AAPL Gain: $ -21.31 Win %: 43.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
AAPL Gain: $ 11.93 Win %: 56.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QP_PM
AAPL Gain: $ 13.09 Win %: 58.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AV_TS
AAPL Gain: $ 7.38 Win %: 58.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AL_TS
AAPL Gain: $ 18.89 Win %: 54.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_RV
AAPL Gain: $ -0.52 Win %: 46.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IR5
AAPL Gain: $ 16.22 Win %: 52.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TR
AAPL Gain: $ -1.49 Win %: 55.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AV
AAPL Gain: $ 7.81 Win %: 57.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AL
AAPL Gain: $ -5.5 Win %: 50.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_VI
AAPL Gain: $ 24.29 Win %: 52.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_LI
AAPL Gain: $ 20.79 Win %: 55.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QP
AAPL Gain: $ 17.62 Win %: 51.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_HM
AAPL Gain: $ 3.7 Win %: 51.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_SS
AAPL Gain: $ 19.84 Win %: 52.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_QL
AAPL Gain: $ 4.02 Win %: 50.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_DB30
AAPL Gain: $ 22.48 Win %: 55.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AO
AAPL Gain: $ -6.5 Win %: 47.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_AC
AAPL Gain: $ 20.42 Win %: 53.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_IT
AAPL Gain: $ 17.43 Win %: 55.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_PM
AAPL Gain: $ 25.97 Win %: 56.00 in 114 days with algo TB1_HL_HI_QM_OB3_OS3_CB5_CS5_TS
AAPL Gain: $ 21.27 Win %: 56.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_TR_QP_DB6
AAPL Gain: $ 19.55 Win %: 53.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_TR_DB6
AAPL Gain: $ 6.08 Win %: 49.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AV_DB6
AAPL Gain: $ 6.23 Win %: 49.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_AL_DB6
AAPL Gain: $ 11.94 Win %: 54.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_RV_QP_DB6
AAPL Gain: $ 35.43 Win %: 57.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_TR_DB6
AAPL Gain: $ 15.95 Win %: 55.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_AV_DB6
AAPL Gain: $ 23.37 Win %: 53.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_HM_QP_DB6
AAPL Gain: $ 31.72 Win %: 57.00 in 114 days with algo TB5_HL_HI_QM_OB3_OS3_CB4_CS4_IT_QL_DB6
